<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvResultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="30dp"
        android:gravity="center_horizontal"
        android:hint="@string/result"
        android:textSize="40dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvNro1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/nro1"
            android:textSize="30dp" />

        <TextView
            android:id="@+id/tvNro2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/nro2"
            android:textSize="30dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt7"
            android:layout_width="70dp"
            android:layout_height="80dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="7" />

        <Button
            android:id="@+id/bt8"
            android:layout_width="70dp"
            android:layout_height="80dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="8" />

        <Button
            android:id="@+id/bt9"
            android:layout_width="70dp"
            android:layout_height="80dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="9" />

        <Button
            android:id="@+id/btmas"
            android:layout_width="70dp"
            android:layout_height="80dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/suma" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt4"
            android:layout_width="70dp"
            android:layout_height="80dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="4" />

        <Button
            android:id="@+id/bt5"
            android:layout_width="70dp"
            android:layout_height="80dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="5" />

        <Button
            android:id="@+id/bt6"
            android:layout_width="70dp"
            android:layout_height="80dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="6" />

        <Button
            android:id="@+id/btmenos"
            android:layout_width="70dp"
            android:layout_height="80dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/resta" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt1"
            android:layout_width="70dp"
            android:layout_height="80dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="1" />

        <Button
            android:id="@+id/bt2"
            android:layout_width="70dp"
            android:layout_height="80dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="2" />

        <Button
            android:id="@+id/bt3"
            android:layout_width="70dp"
            android:layout_height="80dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="3" />

        <Button
            android:id="@+id/btpor"
            android:layout_width="70dp"
            android:layout_height="80dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/multip" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btborrar"
            android:layout_width="70dp"
            android:layout_height="80dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/delete" />

        <Button
            android:id="@+id/bt0"
            android:layout_width="70dp"
            android:layout_height="80dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="0" />

        <Button
            android:id="@+id/btigual"
            android:layout_width="70dp"
            android:layout_height="80dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/igual" />

        <Button
            android:id="@+id/btdiv"
            android:layout_width="70dp"
            android:layout_height="80dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/division" />
    </LinearLayout>

</LinearLayout>
